preowned.css z-index of .product-filter and preowned devices was making a bug, now solved

--- a/src/components/Preowned/Preowned.css
+++ b/src/components/Preowned/Preowned.css
@@ -7,6 +7,7 @@
 }
 
 .product-filter{
+    z-index: 2;
     & label{
         display: block;
     }
@@ -19,7 +20,7 @@
     gap: 30px 15px;
     /* margin: auto; */
    justify-items: end;
-   z-index: -1;
+   z-index: 1;
 }
 
 .price-range{
